--- a/bio.html
+++ b/bio.html
@@ -19,10 +19,10 @@ I easily adapt to new environments, a result of wearing multiple hats through ma
 Here is a smattering of my creative work, projects, and reflections.
 </p>
           <p class="lead">
-            <a href="/">Home</a>
+            <a href="/index">Home</a>
             <a href="/portfolio">Portfolio</a>
-            <a href="#">Projects</a>
-            <a href="#">Bio</a>
+            <a href="/projects">Projects</a>
+            <a href="/bio">Bio</a>
           </p>
         </div>
 
