--- a/bio.html
+++ b/bio.html
@@ -20,7 +20,7 @@ Here is a smattering of my creative work, projects, and reflections.
 </p>
           <p class="lead">
             <a href="/index">Home</a>
-            <a href="/portfolio">Portfolio</a>
+            <a href="/photography">Photography</a>
             <a href="/projects">Projects</a>
             <a href="/bio">Bio</a>
           </p>
